k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: nestjs-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
